[gd_scene load_steps=12 format=3 uid="uid://drhbxetfmkycf"]

[ext_resource type="Script" uid="uid://ctb01ahaulpbr" path="res://scripts/settings.gd" id="1_nkug2"]
[ext_resource type="Texture2D" uid="uid://ct4idplogtxeb" path="res://assets/BGText.tres" id="1_x2hje"]
[ext_resource type="FontFile" uid="uid://coouv157ntw6k" path="res://assets/FONT/Oswald-SemiBold.ttf" id="2_3ykye"]
[ext_resource type="FontFile" uid="uid://cxmbiupcfwqvw" path="res://assets/FONT/Nunito/static/Nunito-SemiBold.ttf" id="4_gc0em"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gc0em"]
bg_color = Color(1.1561769, 1.1561769, 1.1561769, 0.13333334)

[sub_resource type="Gradient" id="Gradient_cj1lu"]
colors = PackedColorArray(0.98039216, 0.7921569, 0, 1, 1, 0.30588236, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_pkhjh"]
gradient = SubResource("Gradient_cj1lu")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_71mqq"]
texture = SubResource("GradientTexture1D_pkhjh")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ykye"]
bg_color = Color(0, 0, 0, 0.19607843)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cj1lu"]
bg_color = Color(0.16470589, 0.50980395, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_71mqq"]
bg_color = Color(0.062274136, 0.3001038, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Control" type="Control" unique_id=1125287029]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nkug2")

[node name="Main_Background" type="TextureRect" parent="." unique_id=718279518]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_x2hje")

[node name="Button" type="Button" parent="." unique_id=267649970 groups=["buttons"]]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.011
anchor_top = 0.021
anchor_right = 0.105
anchor_bottom = 0.095
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_fonts/font = ExtResource("2_3ykye")
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = SubResource("StyleBoxFlat_gc0em")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_gc0em")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gc0em")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_gc0em")
theme_override_styles/hover = SubResource("StyleBoxTexture_71mqq")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_71mqq")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_71mqq")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_71mqq")
text = "Back"

[node name="Panel" type="Panel" parent="." unique_id=1513114858]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.2
anchor_right = 0.65
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3ykye")

[node name="Settings_bg" type="VBoxContainer" parent="Panel" unique_id=1532379710]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2

[node name="Audio_Container" type="VBoxContainer" parent="Panel/Settings_bg" unique_id=1919175465]
layout_mode = 2

[node name="Audio_label" type="Label" parent="Panel/Settings_bg/Audio_Container" unique_id=1769058868]
layout_mode = 2
text = "- Audio -"
horizontal_alignment = 1

[node name="MainV_Container" type="VBoxContainer" parent="Panel/Settings_bg/Audio_Container" unique_id=435296016]
layout_mode = 2

[node name="MainV_label" type="Label" parent="Panel/Settings_bg/Audio_Container/MainV_Container" unique_id=370520471]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_gc0em")
text = "- Main volume -"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Settings_bg/Audio_Container/MainV_Container" unique_id=697716996]
layout_mode = 2

[node name="HSlider_main" type="HSlider" parent="Panel/Settings_bg/Audio_Container/MainV_Container/HBoxContainer" unique_id=1338996325]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 5.12
focus_mode = 0
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_cj1lu")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_71mqq")

[node name="Label" type="Label" parent="Panel/Settings_bg/Audio_Container/MainV_Container/HBoxContainer" unique_id=2037966750]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="MusicV_Container" type="VBoxContainer" parent="Panel/Settings_bg/Audio_Container" unique_id=1782791696]
layout_mode = 2

[node name="MusicV_label" type="Label" parent="Panel/Settings_bg/Audio_Container/MusicV_Container" unique_id=399750488]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("4_gc0em")
text = "- Music volume -"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Settings_bg/Audio_Container/MusicV_Container" unique_id=1851723254]
layout_mode = 2

[node name="HSlider_music" type="HSlider" parent="Panel/Settings_bg/Audio_Container/MusicV_Container/HBoxContainer" unique_id=1733810408]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 5.12
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_cj1lu")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_71mqq")

[node name="Label" type="Label" parent="Panel/Settings_bg/Audio_Container/MusicV_Container/HBoxContainer" unique_id=1309626985]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="SFXV_Container" type="VBoxContainer" parent="Panel/Settings_bg/Audio_Container" unique_id=539749844]
layout_mode = 2

[node name="SFXV_label" type="Label" parent="Panel/Settings_bg/Audio_Container/SFXV_Container" unique_id=1076381546]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("4_gc0em")
text = "- SFX volume -"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Settings_bg/Audio_Container/SFXV_Container" unique_id=852197409]
layout_mode = 2

[node name="HSlider_sfx" type="HSlider" parent="Panel/Settings_bg/Audio_Container/SFXV_Container/HBoxContainer" unique_id=522708896]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 5.12
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_cj1lu")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_71mqq")

[node name="Label" type="Label" parent="Panel/Settings_bg/Audio_Container/SFXV_Container/HBoxContainer" unique_id=1122022831]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="Display_Container" type="VBoxContainer" parent="Panel/Settings_bg" unique_id=1534900226]
layout_mode = 2

[node name="Display_label" type="Label" parent="Panel/Settings_bg/Display_Container" unique_id=1007891585]
layout_mode = 2
text = "- Display -"
horizontal_alignment = 1

[node name="CheckBox" type="CheckBox" parent="Panel/Settings_bg/Display_Container" unique_id=774038460 groups=["buttons"]]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("4_gc0em")
text = "Fullscreen (non-exclusive)"

[node name="CheckBox2" type="CheckBox" parent="Panel/Settings_bg/Display_Container" unique_id=1665369330 groups=["buttons"]]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("4_gc0em")
text = "VSYNC"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="Panel/Settings_bg/Audio_Container/MainV_Container/HBoxContainer/HSlider_main" to="." method="_on_h_slider_main_value_changed"]
[connection signal="value_changed" from="Panel/Settings_bg/Audio_Container/MusicV_Container/HBoxContainer/HSlider_music" to="." method="_on_h_slider_music_value_changed"]
[connection signal="value_changed" from="Panel/Settings_bg/Audio_Container/SFXV_Container/HBoxContainer/HSlider_sfx" to="." method="_on_h_slider_sfx_value_changed"]
[connection signal="toggled" from="Panel/Settings_bg/Display_Container/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="toggled" from="Panel/Settings_bg/Display_Container/CheckBox2" to="." method="_on_check_box_2_toggled"]
